# ecomarket-rag-assistant

./: .gitignore  README.md  app.py  pyproject.toml
data/: inventory_200_products_named.xlsx  orders.json  orders_enhanced.json  product_catalog.xlsx  returns_policy.md  support_examples.json  support_examples_enhanced.json
docs/: eda_chunking_analysis.md  fase_1_modelo_y_arquitectura.md  fase_2_riesgos_y_etica.md  fase_3_Ingenieria_de_prompts_&_evaluacion.md  taller2_fase_1_rag_componentes.md  taller2_fase_2_base_conocimiento.md  taller2_fase_3_integracion_codigo.md  taller_1_fase_3.md  taller_1_fase_3_Ingenieria_de_prompts_&_evaluacion.md
docs/taller1/: taller_1_fase_2_riesgos_y_etica.md
notebooks/: eda_chunking_analysis.ipynb
src/: document_loader.py  inventory_service.py  llm_client.py  order_service.py  prompts.py  rag_pipeline.py  response_builder.py  returns_service.py  router.py  utils.py  utils_format.py
src/core/: router.py
src/llm/: llm_client.py  prompts.py
src/rag/: document_loader.py  rag_pipeline.py  retriever.py
src/services/: inventory_service.py  order_service.py
src/ui_blocks/: chat_handler.py  sidebar.py
