[project]
name = "ecomarket-rag"
version = "0.2.0"
description = "EcoMarket customer support assistant with RAG"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ollama>=0.6.1",
    "streamlit>=1.45.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
]
